# Windowsorter

./: .gitignore  Cargo.toml  LICENSE  README.md  shell.nix
src/: config.rs  lib.rs  main.rs
