[package]
name = "windowsorter"
version = "0.1.0"
edition = "2021"
license = "GPL-3.0-or-later"
license-file = "LICENSE"

[dependencies]
anyhow = "1.0"
clap = { version = "4", features = ["derive"] }
tokio = { version = "1", features = ["rt-multi-thread", "macros"] }
# Use the 0.4 beta of the hyprland crate to pick up upstream fixes/API changes
hyprland = "0.4.0-beta"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
once_cell = "1.20"
serde = { version = "1.0", features = ["derive"] }
toml = "0.7"

[dev-dependencies]
